# rp

./: flake.nix  pyproject.toml
rp/: __init__.py
